force-app/main/default/objects/Course__c/fields/Course_Fees__c.field-meta.xml
<CustomField>
    <fullName>Course_Fees__c</fullName>
    <label>Course Fees</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>