force-app/main/default/objects/Course__c/fields/Faculty_for_this_course__c.field-meta.xml
<CustomField>
    <fullName>Faculty_for_this_course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty for this course</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Course</relationshipLabel>
    <relationshipName>Course</relationshipName>
    <type>Lookup</type>
</CustomField>