force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Fees__c</columns>
    <columns>Faculty_for_this_course__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>